# NetSMF

./: CMakeLists.txt  LICENSE  README.md  configure
cmake/Modules/: FindLOG4CXX.cmake
example/: blog.sh  flickr.sh  log4cxx.config  mat2edge.py  ppi.sh  predict.py  redsvd2emb.py  youtube.sh
example/spmm_benchmark/: a.cc
src/: BinaryGraphWalker.cc  BinaryGraphWalker.h  CMakeLists.txt  GraphWalker.cc  GraphWalker.h  WeightGraphWalker.cc  WeightGraphWalker.h  config.h.cmake  netsmf.cc
src/redsvd/: CMakeLists.txt  fileReader.hpp  redsvd.hpp  redsvdFile.cpp  redsvdFile.hpp  redsvdIncr.hpp  redsvdMain.cpp  redsvdMainIncr.cpp  util.cpp  util.hpp
